# voice

./: .gitignore  Cargo.toml  Makefile  ei-type.c  whisper-cpp-vulkan-setup-plan.md
reis-patched/: .cargo_vcs_info.json  Cargo.toml
src/: eis.rs  keymap.rs  main.rs
